<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chia Address Monitor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="address_list_label">Chia Address List</string>
    <string name="chia_amount_placeholder">%s</string>
    <string name="last_refresh_placeholder">%s</string>
    <string name="chia_widget_config_title">Chia public address widget configuration</string>
    <string name="public_address_hint">Public Chia or Fork address starting with xch, vag, xdg, hdd, etc.</string>
    <string name="chia_widget_config_description">This widget will periodically check the balance of the public address. We use https://alltheblocks.net to get accurate information about your address balance.</string>
    <string name="save_widget_settings">Save</string>
    <string name="chia_address_input_error_wrong">The address seems to be wrong, please check your input. You can find your address in the "Wallet" tab of your Chia UI</string>
    <string name="recycler_item_amount_and_date">%s %s @%s</string>
    <string name="recycler_item_chia_address">%s address</string>
    <string name="loading">Loading …</string>
    <string name="chia_widget_added">Widget added</string>
    <string name="add_address">add</string>
    <string name="error">Error</string>
    <string name="server_communication_error">There was an Error communicating with the Server. Please try again later.</string>
    <string name="add_button_content_description">Add new address</string>
    <string name="revert_delete">Address removed</string>
    <string name="undo">Undo</string>
    <string name="cannot_delete_still_widget">This address cannot be removed, there is still a widget depending on it</string>
    <string name="launcher_does_not_allow_widget_from_app">Your launcher does not provide widget pinning from app.</string>
    <string name="licenses">License info</string>
    <string name="chia_address_list_description">Your list of chia addresses</string>
    <string name="connectionProblems">Error connecting to Server, please check your internet connection or try again later.</string>
    <string name="progress_bar">Progressbar … loading</string>

    <string name="balance_positive_changed_channel_name">Received coins</string>
    <string name="balance_positive_changed_channel_description">You received coins, that is amazing</string>
    <string name="address_balance_changed_notification_header">You received %s %s</string>
    <string name="address_balance_changed_notification_text">Your balance for %s changed from %s %s to %s %s</string>

    <string name="balance_negative_changed_channel_name">Sent coins</string>
    <string name="balance_negative_changed_channel_description">You sent some coins, bought more space for your space farm?</string>
    <string name="address_balance_changed_negative_notification_header">Your sent %s %s</string>
    <string name="address_balance_changed_negative_notification_text">Your balance for %s changed from %s %s to %s %s </string>

    <!-- custom lib -->
<!--    <string name="define_plu_chia_explorer" tools:keep="@string/define_plu_chia_explorer">year;owner</string>-->
<!--    <string name="library_chia_explorer_author" tools:keep="@string/library_chia_explorer_author">Freddie Coleman</string>-->
<!--    <string name="library_chia_explorer_authorWebsite" tools:keep="@string/library_chia_explorer_authorWebsite">https://chiaexplorer.com</string>-->
<!--    <string name="library_chia_explorer_libraryName" tools:keep="@string/library_chia_explorer_libraryName">Chia explorer</string>-->
<!--    <string name="library_chia_explorer_libraryDescription" tools:keep="@string/library_chia_explorer_libraryDescription">Browse and search the Chia blockchain™ with historic data charts.</string>-->
<!--    <string name="library_chia_explorer_libraryVersion" tools:keep="@string/library_chia_explorer_libraryVersion">0.1</string>-->
<!--    <string name="library_chia_explorer_libraryWebsite" tools:keep="@string/library_chia_explorer_libraryWebsite">https://www.chiaexplorer.com/api/v0.1</string>-->

    <string name="define_plu_all_the_blocks"                    tools:keep="@string/define_plu_all_the_blocks">year;owner</string>
    <string name="library_all_the_blocks_author"                tools:keep="@string/library_all_the_blocks_author">SirCotare</string>
    <string name="library_all_the_blocks_authorWebsite"         tools:keep="@string/library_all_the_blocks_authorWebsite">https://alltheblocks.net</string>
    <string name="library_all_the_blocks_libraryName"           tools:keep="@string/library_all_the_blocks_libraryName">All the blocks</string>
    <string name="library_all_the_blocks_libraryDescription"    tools:keep="@string/library_all_the_blocks_libraryDescription">ALL THE BLOCKS - Chia &amp; forks | blockchain explorer</string>
    <string name="library_all_the_blocks_libraryVersion"        tools:keep="@string/library_all_the_blocks_libraryVersion">0.1</string>
    <string name="library_all_the_blocks_libraryWebsite"        tools:keep="@string/library_all_the_blocks_libraryWebsite">https://alltheblocks.net</string>

    <string name="define_plu_font_awesome"                      tools:keep="@string/define_plu_all_the_blocks">year;owner</string>
    <string name="library_font_awesome_author"                  tools:keep="@string/library_font_awesome_author">Font Awesome</string>
    <string name="library_font_awesome_authorWebsite"           tools:keep="@string/library_font_awesome_authorWebsite">https://fontawesome.com/license</string>
    <string name="library_font_awesome_libraryName"             tools:keep="@string/library_font_awesome_libraryName">Font Awesome</string>
    <string name="library_font_awesome_libraryDescription"      tools:keep="@string/library_font_awesome_libraryDescription">The internet\'s most popular icon toolkit has been redesigned and built from scratch. On top of this, features like icon font ligatures, an SVG framework, official NPM packages for popular frontend libraries like React, and access to a new CDN.</string>
    <string name="library_font_awesome_libraryVersion"          tools:keep="@string/library_font_awesome_libraryVersion">5</string>
    <string name="library_font_awesome_libraryWebsite"          tools:keep="@string/library_font_awesome_libraryWebsite">https://fontawesome.com</string>

    <string name="notification_activate_for_address">Enable notifications for this address</string>
    <string name="chia_address_synonym_hint">%s address synonym</string>
    <string name="saved_address_settings">Saved address settings</string>
    <string name="add_widget_to_dashboard">Add this address as widget</string>
    <string name="show_widget_in_mojo">Show widget in this currency. (Mojo is one trillionth of xch. Use this to track very small amounts on the address)</string>
    <string name="copyAddressDescription">copy chia address to clipboard</string>
    <string name="copyAddressSuccessful">Address successfully copied to clipboard</string>
    <string name="copyAddressError">Error while copying address to clipboard</string>
    <string name="chia_fiat_conversion_widget_config_title">Chia exchange rate widget</string>
    <string name="chia_exchange_rate_widget_config_description">This widget will update every two hours. The exchange rate is from the https://coinmarketcap.com/ API. It can differ from specific exchanges.</string>
    <string name="use_gross_balance_description">Show address in gross balance. This will ignore all outgoing transactions. Intended for farmers who would like to see how much they mined in total.</string>
    <string name="android_notifcation_settingns">Android notification settings</string>
    <string name="chia_address_grouping_widget_config_description">Please click the addresses you would like to group.\nCoins cannot be mixed in one Group. Only Chia groups can be converted in Fiat.</string>
    <string name="chia_address_grouping_widget_config_title">Address grouping widget</string>
    <string name="chia_info_grouped_preview_description">You cann group addresses in one widget.</string>
    <string name="unnknownCoin">Unknown</string>
    <string name="can_ony_add_one_type_of_coin">You can only add addresses of the same coin</string>
    <string name="address_list">Address list</string>
    <string name="supported_forks">Supported forks</string>
    <string name="fork_list_header_title">All supported forks</string>
    <string name="fork_list_header_text">For all address balances we utilizes the API of the https://alltheblocks.net to make sure the data is always accurate and updated.\nFor more information tap on the coin.</string>
    <string name="open_fork_info">Open additional fork info in browser</string>

</resources>