<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressDetailsFragment">

    <TextView
        android:id="@+id/address_detail_fragment_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeStepGranularity="3sp"
        app:autoSizeTextType="uniform"

        app:layout_constraintEnd_toStartOf="@+id/copy_address_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/copy_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/copyAddressDescription"
        android:src="@drawable/outline_content_copy_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enable_notifications_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="84dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/notification_activate_for_address"
        app:layout_constraintBottom_toBottomOf="@id/address_has_notification"
        app:layout_constraintEnd_toStartOf="@+id/chia_address_show_in_mojo"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_detail_fragment_header" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/address_has_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/enable_notifications_text" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chia_address_show_in_mojo_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/show_widget_in_mojo"
        app:layout_constraintBottom_toBottomOf="@id/chia_address_show_in_mojo"
        app:layout_constraintEnd_toStartOf="@+id/chia_address_show_in_mojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_notifications_text" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chia_address_show_in_mojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chia_address_show_in_mojo_text"

        />

    <Spinner
        android:id="@+id/chia_convertion_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/chia_address_show_in_mojo_text"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chia_address_synonym_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/chia_address_synonym_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chia_address_show_in_mojo_text">

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_address_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/save_widget_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chia_address_synonym_text_input_layout"
        app:layout_constraintVertical_bias="0.949" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/chia_address_synonym_text_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/chia_address_synonym_text_input_layout"
        />
    <!--    app:layout_constraintStart_toEndOf="@+id/back_button"-->
    <!--    <Button-->
    <!--        android:id="@+id/back_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="24dp"-->
    <!--        android:backgroundTint="?colorPrimary"-->
    <!--        android:text="@string/back"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.29"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/chia_address_synonym_text_input_layout"-->
    <!--        app:layout_constraintVertical_bias="0.949" />-->


</androidx.constraintlayout.widget.ConstraintLayout>